Fix: carosello centrato mobile/tablet, no overflow-x

--- a/style.css
+++ b/style.css
@@ -1997,10 +1997,7 @@ body.modal-open {
     overflow: visible;
   }
   .ht3d-carousel {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-left: 0;
+    margin-left: calc((100vw - 61.2rem) / 2 - 20px);
     margin-top: -15rem;
   }
   .categories-section {
@@ -2057,10 +2054,7 @@ body.modal-open {
     overflow: visible;
   }
   .ht3d-carousel {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-left: 0;
+    margin-left: calc((100vw - 61.2rem) / 2 - 20px);
     margin-top: -15rem;
   }
   .categories-section {
